--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
             <h2 class="font-display text-3xl">Plan een gesprek of demo</h2>
             <p class="text-slate-200/80">Vertel kort je situatie, dan koppelen we hardware en abonnement aan jouw locatie. Binnen 48 uur reageren we.</p>
             <div class="space-y-2 text-sm text-slate-200/80">
-              <p><span class="font-semibold text-white">E-mail:</span> smart.hive.isolator@gmail.com</p>
+              <p><span class="font-semibold text-white">E-mail:</span> info@bijvangst.eu</p>
               <p><span class="font-semibold text-white">Locatie:</span> Den Haag</p>
             </div>
           </div>
@@ -500,7 +500,7 @@
           <div>
             <h4 class="font-semibold text-white">Contact</h4>
             <ul class="mt-2 space-y-1">
-              <li>E-mail: <a class="underline" href="mailto:smart.hive.isolator@gmail.com">smart.hive.isolator@gmail.com</a></li>
+              <li>E-mail: <a class="underline" href="mailto:info@bijvangst.eu">info@bijvangst.eu</a></li>
               <li>Gemeente: Den Haag</li>
               <li>Privacy: op aanvraag</li>
             </ul>
