Translate hexagons to Dutch, update pricing, button colors

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             <a href="#contact" class="hover:text-white">Contact</a>
           </nav>
           <div class="hidden md:block">
-            <a href="#contact" class="inline-flex items-center rounded-full px-4 py-2 bg-honey-500 text-slate-950 font-medium shadow-lg shadow-amber-500/30 hover:bg-honey-600 transition">Plan een gesprek</a>
+            <a href="#contact" class="inline-flex items-center rounded-full px-4 py-2 bg-honey-500 text-white font-medium shadow-lg shadow-amber-500/30 hover:bg-honey-600 transition">Plan een gesprek</a>
           </div>
           <button id="navBtn" class="md:hidden p-2 text-white" aria-label="Open navigatie">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-6 h-6"><path d="M3.75 6.75h16.5v1.5H3.75zM3.75 11.25h16.5v1.5H3.75zM3.75 15.75h16.5v1.5H3.75z"/></svg>
@@ -176,7 +176,7 @@
             <h1 class="font-display text-4xl md:text-5xl leading-tight">Datagedreven zorg voor bijenvolken met hardware, 4G en AI‑inzichten</h1>
             <p class="text-lg text-slate-200/80">Stichting Bijvangst versterkt duurzame bijenhouderij en biodiversiteit. We leveren sensorkastjes, betaalbare stations en een AI‑platform dat realtime data omzet naar bruikbare kennis voor imkers, onderzoekers en overheden.</p>
             <div class="flex flex-wrap gap-3">
-              <a href="#aanbod" class="inline-flex items-center rounded-full px-5 py-3 bg-honey-500 text-slate-950 font-semibold shadow-lg shadow-amber-500/30 hover:bg-honey-600 transition">Bekijk ons aanbod</a>
+              <a href="#aanbod" class="inline-flex items-center rounded-full px-5 py-3 bg-honey-500 text-white font-semibold shadow-lg shadow-amber-500/30 hover:bg-honey-600 transition">Bekijk ons aanbod</a>
               <a href="#contact" class="inline-flex items-center rounded-full px-5 py-3 border border-white/30 text-white hover:bg-white/5 transition">Plan een gesprek</a>
             </div>
             <div class="grid grid-cols-2 gap-4 text-sm text-slate-200/80">
@@ -201,92 +201,92 @@
               <div class="honeycomb">
                 <div class="honeycomb-row">
                   <div class="hex-tile filler"><div class="hex-content"></div></div>
-                  <div class="hex-tile" data-title="Smart Hive" data-body="10 minute measurements">
+                  <div class="hex-tile" data-title="Slimme Kast" data-body="Metingen elke 10 minuten">
                     <div class="hex-content">
                       <span class="text-2xl">📡</span>
-                      <span class="font-semibold text-white text-sm leading-tight mt-1">Smart Hive</span>
+                      <span class="font-semibold text-white text-sm leading-tight mt-1">Slimme Kast</span>
                     </div>
                     <div class="hex-detail">
                       <span class="text-xl">📡</span>
-                      <span class="text-[10px] text-white leading-tight px-1 mt-1">10 minute measurements</span>
+                      <span class="text-[10px] text-white leading-tight px-1 mt-1">Metingen elke 10 minuten</span>
                     </div>
                   </div>
-                  <div class="hex-tile" data-title="AI Analytics" data-body="Constant live analyses">
+                  <div class="hex-tile" data-title="AI Analyse" data-body="Continue live analyses">
                     <div class="hex-content">
                       <span class="text-2xl">🤖</span>
-                      <span class="font-semibold text-white text-sm leading-tight mt-1">AI Analytics</span>
+                      <span class="font-semibold text-white text-sm leading-tight mt-1">AI Analyse</span>
                     </div>
                     <div class="hex-detail">
                       <span class="text-xl">🤖</span>
-                      <span class="text-[10px] text-white leading-tight px-1 mt-1">Constant live analyses</span>
+                      <span class="text-[10px] text-white leading-tight px-1 mt-1">Continue live analyses</span>
                     </div>
                   </div>
-                  <div class="hex-tile" data-title="Beekeeper" data-body="Digital hive management">
+                  <div class="hex-tile" data-title="Imker" data-body="Digitaal kastbeheer">
                     <div class="hex-content">
                       <span class="text-2xl">🧑‍🌾</span>
-                      <span class="font-semibold text-white text-sm leading-tight mt-1">Beekeeper</span>
+                      <span class="font-semibold text-white text-sm leading-tight mt-1">Imker</span>
                     </div>
                     <div class="hex-detail">
                       <span class="text-xl">🧑‍🌾</span>
-                      <span class="text-[10px] text-white leading-tight px-1 mt-1">Digital hive management</span>
+                      <span class="text-[10px] text-white leading-tight px-1 mt-1">Digitaal kastbeheer</span>
                     </div>
                   </div>
                   <div class="hex-tile filler"><div class="hex-content"></div></div>
                 </div>
                 <div class="honeycomb-row">
-                  <div class="hex-tile" data-title="Education" data-body="Education at schools">
+                  <div class="hex-tile" data-title="Educatie" data-body="Lessen op scholen">
                     <div class="hex-content">
                       <span class="text-2xl">🎓</span>
-                      <span class="font-semibold text-white text-sm leading-tight mt-1">Education</span>
+                      <span class="font-semibold text-white text-sm leading-tight mt-1">Educatie</span>
                     </div>
                     <div class="hex-detail">
                       <span class="text-xl">🎓</span>
-                      <span class="text-[10px] text-white leading-tight px-1 mt-1">Education at schools</span>
+                      <span class="text-[10px] text-white leading-tight px-1 mt-1">Lessen op scholen</span>
                     </div>
                   </div>
                   <div class="hex-tile filler"><div class="hex-content"></div></div>
-                  <div class="hex-tile" data-title="Open Data" data-body="Download all data">
+                  <div class="hex-tile" data-title="Open Data" data-body="Download alle data">
                     <div class="hex-content">
                       <span class="text-2xl">📊</span>
                       <span class="font-semibold text-white text-sm leading-tight mt-1">Open Data</span>
                     </div>
                     <div class="hex-detail">
                       <span class="text-xl">📊</span>
-                      <span class="text-[10px] text-white leading-tight px-1 mt-1">Download all data</span>
+                      <span class="text-[10px] text-white leading-tight px-1 mt-1">Download alle data</span>
                     </div>
                   </div>
                   <div class="hex-tile filler"><div class="hex-content"></div></div>
-                  <div class="hex-tile" data-title="Government" data-body="Support government decision">
+                  <div class="hex-tile" data-title="Overheid" data-body="Ondersteuning beleidsbeslissingen">
                     <div class="hex-content">
                       <span class="text-2xl">🏛️</span>
-                      <span class="font-semibold text-white text-sm leading-tight mt-1">Government</span>
+                      <span class="font-semibold text-white text-sm leading-tight mt-1">Overheid</span>
                     </div>
                     <div class="hex-detail">
                       <span class="text-xl">🏛️</span>
-                      <span class="text-[10px] text-white leading-tight px-1 mt-1">Support government decision</span>
+                      <span class="text-[10px] text-white leading-tight px-1 mt-1">Ondersteuning beleidsbeslissingen</span>
                     </div>
                   </div>
                 </div>
                 <div class="honeycomb-row">
                   <div class="hex-tile filler"><div class="hex-content"></div></div>
-                  <div class="hex-tile" data-title="Academy" data-body="Research cooperations">
+                  <div class="hex-tile" data-title="Onderzoek" data-body="Samenwerking met wetenschap">
                     <div class="hex-content">
                       <span class="text-2xl">🔬</span>
-                      <span class="font-semibold text-white text-sm leading-tight mt-1">Academy</span>
+                      <span class="font-semibold text-white text-sm leading-tight mt-1">Onderzoek</span>
                     </div>
                     <div class="hex-detail">
                       <span class="text-xl">🔬</span>
-                      <span class="text-[10px] text-white leading-tight px-1 mt-1">Research cooperations</span>
+                      <span class="text-[10px] text-white leading-tight px-1 mt-1">Samenwerking met wetenschap</span>
                     </div>
                   </div>
-                  <div class="hex-tile" data-title="Mentor" data-body="Mentoring in the beekeepers app">
+                  <div class="hex-tile" data-title="Mentor" data-body="Begeleiding in de imker-app">
                     <div class="hex-content">
                       <span class="text-2xl">🤝</span>
                       <span class="font-semibold text-white text-sm leading-tight mt-1">Mentor</span>
                     </div>
                     <div class="hex-detail">
                       <span class="text-xl">🤝</span>
-                      <span class="text-[10px] text-white leading-tight px-1 mt-1">Mentoring in the beekeepers app</span>
+                      <span class="text-[10px] text-white leading-tight px-1 mt-1">Begeleiding in de imker-app</span>
                     </div>
                   </div>
                   <div class="hex-tile filler"><div class="hex-content"></div></div>
@@ -313,10 +313,10 @@
               <p class="text-sm text-honey-100 font-semibold">Instrumenten</p>
               <h3 class="mt-2 text-xl font-semibold">Kast hardware</h3>
               <ul class="mt-4 space-y-2 text-sm text-slate-200/80">
-                <li>Basestation — <span class="line-through text-slate-400">€200</span> <span class="font-semibold text-honey-300">€100</span></li>
-                <li>Sensor station — <span class="line-through text-slate-400">€100</span> <span class="font-semibold text-honey-300">€50</span></li>
-                <li>Power station — <span class="line-through text-slate-400">€100</span> <span class="font-semibold text-honey-300">€50</span></li>
-                <li>Weightscale <span class="text-slate-400">(optioneel)</span> — <span class="line-through text-slate-400">€200</span> <span class="font-semibold text-honey-300">€100</span></li>
+                <li>Basestation <span class="text-slate-400">(standard)</span> — <span class="line-through text-slate-400">€100</span> <span class="font-semibold text-honey-300">€50</span></li>
+                <li>Sensor module <span class="text-slate-400">(standard)</span> — <span class="line-through text-slate-400">€50</span> <span class="font-semibold text-honey-300">€25</span></li>
+                <li>Power module <span class="text-slate-400">(standard)</span> — <span class="line-through text-slate-400">€50</span> <span class="font-semibold text-honey-300">€25</span></li>
+                <li>Weightscale <span class="text-slate-400">(optioneel)</span> — <span class="line-through text-slate-400">€100</span> <span class="font-semibold text-honey-300">€50</span></li>
               </ul>
               <p class="mt-4 text-sm text-honey-300 font-semibold">🎉 50% korting voor eerste 100 apparaten!</p>
               <p class="text-sm text-slate-200/80">Modulair: kies wat je nodig hebt per kast.</p>
@@ -472,7 +472,7 @@
                   <input type="checkbox" name="consent" required class="rounded border-white/30 bg-white/5" /> Ik ga akkoord met de privacyverklaring.
                 </label>
 
-                <button class="inline-flex items-center justify-center rounded-full px-5 py-3 bg-honey-500 text-slate-950 font-semibold shadow-lg shadow-amber-500/30 hover:bg-honey-600 transition" type="submit">Verzenden</button>
+                <button class="inline-flex items-center justify-center rounded-full px-5 py-3 bg-honey-500 text-white font-semibold shadow-lg shadow-amber-500/30 hover:bg-honey-600 transition" type="submit">Verzenden</button>
               </form>
             </div>
           </div>
