update contact form

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta property="og:title" content="Stichting Bijvangst – Datagedreven bijenkasten" />
   <meta property="og:description" content="Realtime sensordata, AI‑inzichten en een toegankelijke hardwarelijn voor imkers en onderzoek." />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://smart-isolator.github.io/" />
+  <meta property="og:url" content="https://www.bijvangst.eu/" />
   <meta name="twitter:card" content="summary_large_image" />
   <link rel="icon" href="images/logo.png" type="image/png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -517,7 +517,7 @@
 
           <div class="lg:col-span-3">
             <div class="p-6 md:p-8 rounded-2xl bg-white/5 border border-white/10 shadow-xl">
-              <form class="grid gap-4" action="https://formspree.io/f/mjkargyr" method="POST">
+              <form class="grid gap-4" action="https://formspree.io/f/xpqwkbdr" method="POST">
                 <div class="grid md:grid-cols-2 gap-4">
                   <div>
                     <label class="text-sm text-slate-200" for="name">Naam</label>
